--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet" />
 
         <link rel="stylesheet" href="./SRC/css/reset.css">   
-        <link rel="stylesheet" href="./SRC/css/estilos.css"> 
+        <link rel="stylesheet" href="./src/css/estilos.css"> 
         <link rel="stylesheet" href="./SRC/css/responsivo.css"> 
        
     </head>
