--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet" />
 
-        <link rel="stylesheet" href="./SRC/css/reset.css">   
-        <link rel="stylesheet" href="./src/css/estilos.css"> 
-        <link rel="stylesheet" href="./SRC/css/responsivo.css"> 
+        <link rel="stylesheet" href="src/css/reset.css">   
+        <link rel="stylesheet" href="src/css/estilos.css"> 
+        <link rel="stylesheet" href="src/css/responsivo.css"> 
        
     </head>
     <body>
